--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+}
+body {
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    padding: 20px;
+}
+h1 {
+    color: black;
+    text-align: center;
+}
+h2 {
+    color: cadetblue;
+}
