--- a/style.css
+++ b/style.css
@@ -19,3 +19,10 @@ h2 {
 .operations button {
   margin: 5 px;
 }
+.matrix-table {
+    margin: 20px auto;
+    border-collapse: collapse;
+}
+.matrix-table td {
+    padding: 5px;
+}
