исправил ошибки и добавил больше операций с матрицами

--- a/style.css
+++ b/style.css
@@ -3,29 +3,36 @@
     padding: 0;
     box-sizing:border-box;
 }
+
 body {
     font-family: 'Times New Roman', Times, serif;
     line-height: 1.6;
     background-color: #f4f4f4;
     padding: 20px;
 }
+
 h1 {
     color: black;
     text-align: center;
 }
+
 h2 {
     color: cadetblue;
 }
+
 .operations button {
   margin: 5px;
 }
+
 .matrix-table {
     margin: 20px auto;
     border-collapse: collapse;
 }
+
 .matrix-table td {
     padding: 5px;
 }
+
 .matrix-table input {
     width: 60px;
     height: 40px;
@@ -35,13 +42,22 @@ h2 {
     border: 2px solid#fffdfd;
     border-radius: 4px;
 }
-.matrix-table inpit:focus {
-    outline: none;
-    border-color: #3bd040;
-    background-color: #f5fff5;
+
+.matrix-table input:focus {
+  outline: none;
+  border-color: #3bd040;
+  background-color: #f5fff5;
 }
+
 .buttons {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
+}
+
+#result {
+  margin-top: 20px;
+  padding: 15px;
+  background: white;
+  border-radius: 5px;
 }
