--- a/style_.css
+++ b/style_.css
@@ -293,3 +293,30 @@ hr {
   border-top: 2px solid #eee;
   margin: 16px 0;
 }
+
+#matrixA-container,
+#matrixB-container {
+  overflow-x: auto;
+  max-width: 100%;
+}
+
+/* для больших матриц уменьшаем ячейки */
+.matrix-table input {
+  width: 62px;
+  height: 42px;
+  padding: 6px;
+  text-align: center;
+  font-size: 16px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  transition: all 0.2s ease;
+  min-width: 45px; /* минимальная ширина */
+}
+
+@media (max-width: 900px) {
+  .matrix-table input {
+    width: 50px;
+    height: 38px;
+    font-size: 14px;
+  }
+}
